--- a/nginx-deployment.yaml
+++ b/nginx-deployment.yaml
@@ -5,7 +5,12 @@ metadata:
     labels:
         app: nginx
 spec:
-    replicas: 3
+    strategy:
+        type: RollingUpdate
+        rollingUpdate:
+            maxUnavailable: 1
+            maxSurge: 1 
+    replicas: 7
     selector:
         matchLabels:
             app: nginx
@@ -16,6 +21,6 @@ spec:
         spec:
             containers:
                 - name: nginx
-                  image: nginx:1.14.2
+                  image: nginx:1.15.12
                   ports:
                       - containerPort: 80
